fix weird spacing in sequential audio, styling

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Verdana, sans-serif;
     margin: 25px;
     padding: 30px;
     background-color: #f0f0f0;
